# flutter-rust-core

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/tranthienhau/flutter_rust_core/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: providers.dart  rust_ffi.dart
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: build_android.sh  build_ios.sh
test/: widget_test.dart
